updating images to css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>Career Portfolio</title>
 </head>
-
-
 <body>
-
+<div class="header">
     <nav id="navbar">
         <h1>Erica Fagioli</h1>
         <ul>
@@ -55,29 +53,46 @@
     <section class="gallery-links">
         <section id="Work"></section>
 
-        <a href="https://efagioli01.github.io/mini-project-landing-page/" class="gallery-img">
-            <img src="images/imageforhw.PNG" alt="mini landing page">
+        <a href="https://efagioli01.github.io/mini-project-landing-page/" class="gallery-img-big">
+            <img src="images/imageforhwresize.PNG" alt="Mini landing page with a picture of me and contact links">
+            <div class="text-wrapper">
+                <h3>Mini Landing Page Projecy</36>
+                </div>
         </a>
 
 
         <a href="https://efagioli01.github.io/horiseon-refactor/" class="gallery-img">
             <img src="images/horiseon.PNG" alt="Horiseon Company refactor website">
+            <div class="text-wrapper">
+                <h3>Horiseon Company Refactor assignment</h3>
+                </div>
         </a>
 
 
         <a href="https://efagioli01.github.io/prework-about-me/" class="gallery-img">
-            <img src=images/preworkpicture.PNG alt="prework mini port">
+            <img src=images/preworkpictureresize.PNG alt="prework mini">
+            <div class="text-wrapper">
+                <h3>Pre work mini website about me</h3>
+                </div>
         </a>
 
 
-        <a href="https://google.com" class="gallery-img">
-            <img src="https://via.placeholder.com/1264x710" alt="place">
+        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/" 
+        class="gallery-img"> 
+            <img src="images/palmtree.jpg" alt="Palm trees">
+            <div class="text-wrapper">
+                <h3>sample</h3>
+                </div>
         </a>
 
-
-        <a href="https://google.com" class="gallery-img">
-            <img src="https://via.placeholder.com/1264x710" alt="place">
+        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/" 
+        class="gallery-img">
+            <img src="images/palmtree.jpg" alt="Palm trees"> 
+            <div class="text-wrapper">
+                <h3>sample</h3>
+                </div>
         </a>
+        
 
     </section>
 
