updates to css and modified html

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <title>Career Portfolio</title>
 </head>
+
 <body>
-<div class="header">
+
     <nav id="navbar">
-        <h1>Erica Fagioli</h1>
+        <header>Erica Fagioli</header>
         <ul>
             <li><a href="#aboutme">About Me</a></li>
             <li><a href="#Work">work</a></li>
@@ -21,10 +23,10 @@
 
 
     <div id="subheader"></div>
-
+<main>
 
     <section id="aboutme" class="links">
-        <h2>About Me</h2>
+        <h1>About Me</h1>
         <p> <img src="images/image0.png" alt="picture of me">
             stuff about me Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -43,61 +45,61 @@
             Excepteur sint occaecat cupidatat non proident, sunt in culpa
             qui officia deserunt mollit anim id est laborum.</p></br>
     </section>
+    </main>
 
-
-
-    <div class="wrapper">
-        <h2 class="gallery-links-2">Work</h2>
-    </div>
 
     <section class="gallery-links">
         <section id="Work"></section>
+        <h1>Work</h1>
 
-        <a href="https://efagioli01.github.io/mini-project-landing-page/" class="gallery-img-big">
+
+        <a href="https://efagioli01.github.io/mini-project-landing-page/"> <div class="gallery-img1">
             <img src="images/imageforhwresize.PNG" alt="Mini landing page with a picture of me and contact links">
-            <div class="text-wrapper">
-                <h3>Mini Landing Page Projecy</36>
+            <h3>Mini project landing page</h3>
                 </div>
-        </a>
+            </a>
 
 
-        <a href="https://efagioli01.github.io/horiseon-refactor/" class="gallery-img">
+        <a href="https://efagioli01.github.io/horiseon-refactor/"> <div class="gallery-img2">
             <img src="images/horiseon.PNG" alt="Horiseon Company refactor website">
-            <div class="text-wrapper">
-                <h3>Horiseon Company Refactor assignment</h3>
-                </div>
-        </a>
+            <h3> Horiseon Company Refactor assignment</h3>
+                 </div>
+                 </a>
 
 
-        <a href="https://efagioli01.github.io/prework-about-me/" class="gallery-img">
+        <a href="https://efagioli01.github.io/prework-about-me/"> <div class="gallery-img3">
             <img src=images/preworkpictureresize.PNG alt="prework mini">
-            <div class="text-wrapper">
-                <h3>Pre work mini website about me</h3>
+            <h3>Pre work mini website about me</h3>
                 </div>
-        </a>
+                 </a>
 
 
-        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/" 
-        class="gallery-img"> 
+        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
+        <div class="gallery-img4"> 
             <img src="images/palmtree.jpg" alt="Palm trees">
-            <div class="text-wrapper">
-                <h3>sample</h3>
-                </div>
+            <h3> coming soon!</h3>
+        </div>
         </a>
 
-        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/" 
-        class="gallery-img">
-            <img src="images/palmtree.jpg" alt="Palm trees"> 
-            <div class="text-wrapper">
-                <h3>sample</h3>
+        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
+            <div class="gallery-img4"> 
+                <img src="images/palmtree.jpg" alt="Palm trees">
+                <h3> coming soon!</h3>
+            </div>
+            </a>
+
+            <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
+                <div class="gallery-img4"> 
+                    <img src="images/palmtree.jpg" alt="Palm trees">
+                    <h3> coming soon!</h3>
                 </div>
-        </a>
+                </a>
         
-
+    
     </section>
 
     <section id="contact" class="contact-links">
-        <h2>Contact Me</h2>
+        <h1>Contact Me</h1>
         <ul>
             <li>
                 <a href="mailto:efagioli01@gmail.com">efagioli01@gmail.com</a>
@@ -113,12 +115,6 @@
             </li>
         </ul>
     </section>
-
-
-
-
-
-
 
 
     <footer>
