--- a/index.html
+++ b/index.html
@@ -23,79 +23,76 @@
 
 
     <div id="subheader"></div>
-<main>
+    <main>
 
-    <section id="aboutme" class="links">
-        <h1>About Me</h1>
-        <p> <img src="images/image0.png" alt="picture of me">
-            stuff about me Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat.>Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillumdolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa
-            qui officia deserunt mollit anim id est laborum.</p>
-        <br>
+        <section id="aboutme" class="links">
+            <h1>About Me</h1>
+            <p> <img src="images/image0.png" alt="picture of me">
+                stuff about me Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.>Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillumdolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum.</p>
+            <br>
 
-        <p>stuff about me Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-            nisi ut aliquip ex ea commodo consequat.>Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillumdolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa
-            qui officia deserunt mollit anim id est laborum.</p></br>
-    </section>
+            <p>stuff about me Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.>Duis aute irure dolor in
+                reprehenderit in voluptate velit esse cillumdolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                qui officia deserunt mollit anim id est laborum.</p></br>
+        </section>
     </main>
 
 
-    <section class="gallery-links">
-        <section id="Work"></section>
+    <section class="gallery-links" id="Work">
+
         <h1>Work</h1>
+        <div>
 
 
-        <a href="https://efagioli01.github.io/mini-project-landing-page/"> <div class="gallery-img1">
-            <img src="images/imageforhwresize.PNG" alt="Mini landing page with a picture of me and contact links">
-            <h3>Mini project landing page</h3>
-                </div>
+            <a href="https://efagioli01.github.io/mini-project-landing-page/">
+                    <img src="images/imageforhwresize.PNG"
+                        alt="Mini landing page with a picture of me and contact links">
+                    <h3>Mini project landing page</h3>
             </a>
 
 
-        <a href="https://efagioli01.github.io/horiseon-refactor/"> <div class="gallery-img2">
-            <img src="images/horiseon.PNG" alt="Horiseon Company refactor website">
-            <h3> Horiseon Company Refactor assignment</h3>
-                 </div>
-                 </a>
-
-
-        <a href="https://efagioli01.github.io/prework-about-me/"> <div class="gallery-img3">
-            <img src=images/preworkpictureresize.PNG alt="prework mini">
-            <h3>Pre work mini website about me</h3>
-                </div>
-                 </a>
-
-
-        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
-        <div class="gallery-img4"> 
-            <img src="images/palmtree.jpg" alt="Palm trees">
-            <h3> coming soon!</h3>
-        </div>
-        </a>
-
-        <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
-            <div class="gallery-img4"> 
-                <img src="images/palmtree.jpg" alt="Palm trees">
-                <h3> coming soon!</h3>
-            </div>
+            <a href="https://efagioli01.github.io/horiseon-refactor/">
+                    <img src="images/horiseon.PNG" alt="Horiseon Company refactor website">
+                    <h3> Horiseon Company Refactor assignment</h3>
             </a>
 
-            <a href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
-                <div class="gallery-img4"> 
+
+            <a href="https://efagioli01.github.io/prework-about-me/">
+                    <img src=images/preworkpictureresize.PNG alt="prework mini">
+                    <h3>Pre work mini website about me</h3>
+            </a>
+
+
+            <a
+                href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
                     <img src="images/palmtree.jpg" alt="Palm trees">
                     <h3> coming soon!</h3>
-                </div>
-                </a>
-        
-    
+            </a>
+
+            <a
+                href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
+                    <img src="images/palmtree.jpg" alt="Palm trees">
+                    <h3> coming soon!</h3>
+            </a>
+
+            <a
+                href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
+                    <img src="images/palmtree.jpg" alt="Palm trees">
+                    <h3> coming soon!</h3>
+            </a>
+        </div>
+
+
     </section>
 
     <section id="contact" class="contact-links">
@@ -118,7 +115,7 @@
 
 
     <footer>
-         Created by Erica Fagioli 2021
+        Created by Erica Fagioli 2021
     </footer>
 </body>
 
