--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="reset.css" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <title>Career Portfolio</title>
@@ -115,7 +116,7 @@
 
 
     <footer>
-        Created by Erica Fagioli 2021
+        &copy; Created by Erica Fagioli 2021
     </footer>
 </body>
 
