final updates to html and css in regards to responsiveness

--- a/index.html
+++ b/index.html
@@ -29,22 +29,11 @@
         <section id="aboutme" class="links">
             <h1>About Me</h1>
             <p> <img src="images/image0.png" alt="picture of me">
-                stuff about me Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.>Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillumdolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum.</p>
-            <br>
-
-            <p>stuff about me Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.>Duis aute irure dolor in
-                reprehenderit in voluptate velit esse cillumdolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum.</p></br>
+                My name is Erica Fagioli. I am a graduate of Salem State University with a Bachelor's degree in Business Administration with a
+            concentration in Human Resources Management. I grew up in Massachusetts and in November of 2020 I moved to Florida. 
+            Currently, I work as an Operations Manager. I am working towards my career in Web Development and am enrolled in UNH Full-Stack Coding Bootcamp. I am scheduled to
+        complete the course by August of 2021 and hopefully can get started with my new career soon after! </p>
+           
         </section>
     </main>
 
