--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <section id="aboutme" class="links">
             <h1>About Me</h1>
-            <p> <img src="images/image0.png" alt="picture of me">
+            <p> <img src="images/profilepicture.PNG" alt="picture of me">
                 My name is Erica Fagioli. I am a graduate of Salem State University with a Bachelor's degree in Business Administration with a
             concentration in Human Resources Management. I grew up in Massachusetts and in November of 2020 I moved to Florida. 
             Currently, I work as an Operations Manager. I am working towards my career in Web Development and am enrolled in UNH Full-Stack Coding Bootcamp. I am scheduled to
@@ -44,29 +44,30 @@
         <div>
 
 
-            <a href="https://efagioli01.github.io/mini-project-landing-page/">
-                    <img src="images/imageforhwresize.PNG"
-                        alt="Mini landing page with a picture of me and contact links">
-                    <h3>Mini project landing page</h3>
-            </a>
-
-
             <a href="https://efagioli01.github.io/horiseon-refactor/">
-                    <img src="images/horiseon.PNG" alt="Horiseon Company refactor website">
-                    <h3> Horiseon Company Refactor assignment</h3>
+                <img src="images/horiseon.PNG" alt="Horiseon Company refactor website">
+                <h3> Horiseon Company Refactor assignment</h3>
+        </a>
+
+
+            <a href=" https://efagioli01.github.io/Password-Generator-code-refactor/"></a>
+            <img src ="images/Captureforp.PNG"
+                        alt="text">
+                    <h3>Password-Generator-code-refactor</h3>
             </a>
+           
 
 
-            <a href="https://efagioli01.github.io/prework-about-me/">
-                    <img src=images/preworkpictureresize.PNG alt="prework mini">
-                    <h3>Pre work mini website about me</h3>
+            <a href="https://efagioli01.github.io/API-code-quiz/">
+                    <img src="images/Captureforp2.PNG" alt="text">
+                    <h3>API-code-quiz</h3>
             </a>
 
 
             <a
-                href="https://images.unsplash.com/photo-1535392432937-a27c36ec07b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80/">
-                    <img src="images/palmtree.jpg" alt="Palm trees">
-                    <h3> coming soon!</h3>
+                href="https://efagioli01.github.io/Work-Day-Scheduler-Code-Refactor/">
+                    <img src="images/Captureforp3.PNG" alt="texts">
+                    <h3> Work-Day-Scheduler-Code-Refactor</h3>
             </a>
 
             <a
