updated linkedin and about me section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
     integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
 
-  <!-- Compressed JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
-    integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
     integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous" />
@@ -30,9 +27,9 @@
   <img class="portfolio-hero-header-logo" src="images/profile resize.PNG." alt="picture of me" />
   <h1 class="portfolio-hero-header-h1">Erica Fagioli</h1>
   <ul class="portfolio-hero-header-description">
-    <li>Portfolio Example</li>
+    <!-- <li>Portfolio Example</li>
     <li>Super Clean</li>
-    <li>Super Simple</li>
+    <li>Super Simple</li> -->
   </ul>
   <ul class="portfolio-hero-header-menu">
     <li><a class="hollow button secondary" href="#aboutme">About Me</a></li>
@@ -44,12 +41,13 @@
 
 <section id="aboutme" class="aboutMe">
   <h4>About Me</h4>
-  <p> My name is Erica Fagioli. I am a graduate of Salem State University with a Bachelor's degree in Business
-    Administration with a
-    concentration in Human Resources Management. I grew up in Massachusetts and in November of 2020 I moved to Florida.
-    Currently, I work as an Operations Manager.I am working towards my career in Web Development and am enrolled in UNH
-    Full-Stack Coding Bootcamp. I am scheduled to
-    complete the course by August of 2021 and hopefully can get started with my new career soon after! </p>
+  <p> I am a full stack web development student at University of New Hampshire. Set to graduate in the coming months, I am eager to secure challenging roles in world of web development.
+
+    My studies have provided me with broad proficiency in the use of coding methods, tools, software packages and techniques. Alongside this, I have been able to develop strong time management skills while studying and completing projects while working my full time management job. As such, I am confident that I can make an instant impact in web development roles.</p>
+    
+   <p>I am eager to learn about potential career opportunities, so I would be pleased to chat about job openings in the web development sphere.</p>
+    
+    <p>My key skills include: HTML5, CSS, JavaScript, jQuery, Bootstrap  </p>
 </section>
 
 
