updated links and added project 2

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     
    <p>I am eager to learn about potential career opportunities, so I would be pleased to chat about job openings in the web development sphere.</p>
     
-    <p>My key skills include: HTML5, CSS, JavaScript, jQuery, Bootstrap  </p>
+    <p>My key skills include: HTML5, CSS, JavaScript, jQuery, Bootstrap, MySql2, Express, Node.js, Handlebars  </p>
 </section>
 
 
@@ -141,6 +141,20 @@
             <img class="image" src="images/find me food.PNG">
           </a>
           <a href="https://github.com/UNH-Bootcamp-Projects/project-1-group-c">
+            <div class="card-section"></div>
+            <p>Link to Repository</p>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="cell small-4">
+      <div class="card">
+        <div class="card-section">
+          <h4>Masker Aid</h4>
+          <a href="https://unh-bootcamp-projects.github.io/project-1-group-c/">
+            <img class="image" src="images/mask.PNG">
+          </a>
+          <a href="https://github.com/abalcs/Masker-Aid">
             <div class="card-section"></div>
             <p>Link to Repository</p>
           </a>
